--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
           href="https://twitter.com/jonasschmedtman"
           >Jonas Schmedtmann</a
         >. Use for learning or your portfolio. Don't use to teach. Don't claim
-        as your own product.
+        as your own product. JavaScript implemented by Eben Coetzer.
       </p>
     </footer>
 
